input par défaut dans benchmark